[package]
name = "hg-parser"
version = "0.2.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
description = """
Mercurial repository changelog parser. It allows to get any revision
with creation date, user, parents, branch and files.
"""
edition = "2018"
license = "GPL-2.0-or-later"
readme = "README.md"
homepage = "https://github.com/kilork/hg-parser"
repository = "https://github.com/kilork/hg-parser"
keywords = ["hg", "mercurial", "parser"]

[features]
jemalloc = ["jemallocator"]

[dependencies]
nom = "4.2"
flate2 = "1.0"
bitflags = "1.0"
byteorder = "1.3"
chrono = "0.4"
lazy_static = "1.3"
sha-1 = "0.8"
rayon = "1.0"
ordered-parallel-iterator = "0.1"

jemallocator = { version = "0.3", optional = true }

lru-cache = "0.1"
