[package]
name = "hg-parser"
version = "0.4.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
description = """
Mercurial repository changelog parser. It allows to get any revision
with creation date, user, parents, branch and files.
"""
edition = "2018"
license = "GPL-2.0-or-later"
readme = "README.md"
homepage = "https://github.com/kilork/hg-parser"
repository = "https://github.com/kilork/hg-parser"
keywords = ["hg", "mercurial", "parser"]

[dependencies]
nom = "4.2"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
bitflags = { version = "1.2", default-features = false }
byteorder = { version = "1.3", default-features = false }
chrono = { version = "0.4", features = ["clock"], default-features = false }
lazy_static = { version = "1.4", default-features = false }
sha-1 = { version = "0.9", default-features = false }
rayon = { version = "1.4", default-features = false }
ordered-parallel-iterator = { version = "0.1", default-features = false }
failure = "0.1"
lru-cache = { version = "0.1", default-features = false }
