[package]
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
description = """
Mercurial repository changelog parser. It allows to get any revision
with creation date, user, parents, branch and files.
"""
edition = "2018"
homepage = "https://github.com/kilork/hg-parser"
keywords = ["hg", "mercurial", "parser"]
license = "GPL-2.0-or-later"
name = "hg-parser"
repository = "https://github.com/kilork/hg-parser"
version = "0.7.0"

[dependencies]
bitflags = {version = "2.5", default-features = false}
byteorder = {version = "1.3", default-features = false}
chrono = {version = "0.4", features = ["clock"], default-features = false}
flate2 = "1.0"
lazy_static = {version = "1.4", default-features = false}
lru-cache = {version = "0.1", default-features = false}
nom = {version = "7.1", default-features = false, features = ["alloc"]}
ordered-parallel-iterator = {version = "0.1", default-features = false}
rayon = {version = "1.4", default-features = false}
sha-1 = {version = "0.10", default-features = false}
thiserror = "1"
